--- a/sso/sso-test/src/main/resources/templates/index.html
+++ b/sso/sso-test/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>SSO登录</title>
+    <title>管理员首页</title>
 </head>
 <body>
 <p>管理员页面</p>
