--- a/seckill/src/main/resources/templates/goods_list.html
+++ b/seckill/src/main/resources/templates/goods_list.html
@@ -30,8 +30,10 @@
                 <td th:text="${goods.goodsPrice}"></td>  
                 <td th:text="${goods.miaoshaPrice}"></td>  
                 <td th:text="${goods.stockCount}"></td>
-                <td><a th:href="'/goods/to_detail/'+${goods.id}">详情</a></td>  
-     </tr>  
+                <!--<td><a th:href="'/goods/to_detail'+${goods.id}">详情</a></td>-->
+                <td><a th:href="'/goods_detail.htm?goodsId='+${goods.id}">详情</a></td>
+
+    </tr>
   </table>
 </div>
 </body>
